# eif-207-web-history-manager

./: .gitignore  CMakeLists.txt  README.md
eif-207-web-history-manager/: CMakeLists.txt  main.cpp
eif-207-web-history-manager/files/: pages.csv
eif-207-web-history-manager/src/: Bookmark.cpp  Bookmark.h  Browser.cpp  Browser.h  CMakeLists.txt  History.cpp  History.h  Navegador.cpp  Navegador.h  SearchManager.h  Tab.cpp  Tab.h  WebPage.cpp  WebPage.h
eif-207-web-history-manager/src/controllers/: BrowserController.cpp  BrowserController.h  CMakeLists.txt
eif-207-web-history-manager/src/gui/: CMakeLists.txt  Menu.cpp  Menu.h
eif-207-web-history-manager/src/managers/: BookmarkManager.cpp  BookmarkManager.h  Browser.cpp  Browser.h  BrowserController.cpp  BrowserController.h  CMakeLists.txt  SearchManager.cpp  SearchManager.h  TabManager.cpp  TabManager.h
eif-207-web-history-manager/src/model/: Bookmark.cpp  Bookmark.h  CMakeLists.txt  History.cpp  History.h  Policies.cpp  Policies.h  Policy.cpp  Policy.h  Serializable.h  Tab.cpp  Tab.h  WebPage.cpp  WebPage.h
eif-207-web-history-manager/src/serializers/: CMakeLists.txt  Serializer.h  WebPageSerializer.cpp  WebPageSerializer.h
eif-207-web-history-manager/tests/: CMakeLists.txt  test1.cpp
